--- a/components/ModalNav/Modal.module.css
+++ b/components/ModalNav/Modal.module.css
@@ -20,8 +20,8 @@
 }
 
 .mobileNav:hover,
-.mobileLink:active,
-.mobileLink.active {
+.mobileNav:active,
+.mobileNav.active {
   color: gold;
 }
 
