--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: rgb(183, 149, 1);
+  color: goldenrod;
   text-decoration: none;
 }
 a:hover,
